--- a/MyProg/accountInfoForManagersPage.xaml
+++ b/MyProg/accountInfoForManagersPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MyProg.accountInfoPage"
+﻿<Page x:Class="MyProg.accountInfoForManagers"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,15 @@
       xmlns:local="clr-namespace:MyProg"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
-      Title="accountInfoPage">
+      Title="accountInfoForManagers">
+
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="82*"/>
             <ColumnDefinition Width="113*"/>
-            <ColumnDefinition Width="114*"/>
-            <ColumnDefinition Width="42*"/>
+            <ColumnDefinition Width="61*"/>
+            <ColumnDefinition Width="95*"/>
             <ColumnDefinition Width="74*"/>
             <ColumnDefinition Width="111*"/>
             <ColumnDefinition Width="264*"/>
@@ -43,9 +44,9 @@
         <Label Name="lblLastName" Content="" Foreground="#FF007ACC" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="3"/>
         <Label x:Name="lblDateOfBirth" Content="" Foreground="#FF007ACC" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="3"/>
         <Label x:Name="lblPrivilege" Content="" Foreground="#FF007ACC" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="3"/>
-        <Button Name="btnRegister" Content="Регистрация нового&#xD;&#xA;      пользователя" Background="#FF007ACC" Foreground="White" FontSize="16" Grid.Column="1" Grid.Row="12" Grid.ColumnSpan="2" Click="btnRegister_Click"/>
-        <Button x:Name="btnChangePass" Content="Сменить пароль" Background="#FF007ACC" Foreground="White" FontSize="16" Grid.Column="4" Grid.Row="12" Grid.ColumnSpan="2" Click="BtnChangePass_Click"/>
+        <Button x:Name="btnChangePass" Content="Сменить пароль" Background="#FF007ACC" Foreground="White" FontSize="16" Grid.Column="1" Grid.Row="12" Grid.ColumnSpan="2" Click="BtnChangePass_Click"/>
         <Label Content="Пол:  " Foreground="#FF007ACC" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Grid.Row="10" Grid.ColumnSpan="2"/>
         <Label x:Name="lblSex" Content="" Foreground="#FF007ACC" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="3"/>
     </Grid>
 </Page>
+
